Website Skeleton commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logobox">
                 <a href="index.html" class="logo-link"><img src="Assets/logo_cake.png" class="logo" alt="logo"></a>
         
-                <div class="main-menu">
+                <div class="menu-box">
                     <ul>
                         <li class="menu-item"><a href="index.html">HOME</a></li>
                         <li class="menu-item"><a href="about.html">ABOUT</a></li>
@@ -39,7 +39,7 @@
 
     </main>
 
-    <footer>
+<footer>
 
     </footer>
 
