--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="front">
             <div id="f1" class="front-content">
               <img src="images/cookie.jpg" alt="" width="300px" height="300px">
-              <a  id="start-btn" href="#p2">start here</a>
+              <a  id="start-btn" href="#p2">start hhhhere</a>
             </div>
 
           </div>
