--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="logo" src="images/logo_cake.svg" width="70px" height="70px" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="logo" src="Assets/logo_cake.png" width="70px" height="70px" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -58,15 +58,15 @@
           <!-- front page -->
           <div class="front">
             <div id="f1" class="front-content">
-              <img src="images/cookie.jpg" alt="" width="300px" height="300px">
-              <a  id="start-btn" href="#p2">start hhhhere</a>
+              <img src="Assets/cookie.jpg" alt="" width="300px" height="300px">
+              <a  id="start-btn" href="#p2">start here</a>
             </div>
 
           </div>
           <!-- back page -->
           <div class="back">
             <div id="b1" class="back-content">
-              <a href="#"><img class="logo" src="images/bakery.png" width="450px" height="200px" alt=""></a>
+              <a href="#"><img class="logo" src="Assets/bakery.png" width="450px" height="200px" alt=""></a>
 
             </div>
 
@@ -82,8 +82,8 @@
           <div class="front">
             <div id="f2" class="front-content">
               <h2 class="home-head">What would you like today?</h2>
-              <img id="home-cookies" class="option-img" src="images/cookies.jpg" alt="" width="150px" height="120px">
-              <img  id="home-cake"class="option-img" src="images/cakes.jpg" alt="" width="150px" height="120px">
+              <img id="home-cookies" class="option-img" src="Assets/cookies.jpg" alt="" width="150px" height="120px">
+              <img  id="home-cake"class="option-img" src="Assets/cakes.jpg" alt="" width="150px" height="120px">
               <a  id="cookie-btn" class="refer-btn" href="#p2">Cookies</a>
               <a  id="cake-btn" class="refer-btn"href="#p2">Cakes</a>
 
@@ -94,7 +94,7 @@
           <!-- back page -->
           <div class="back">
             <div id="b2" class="back-content">
-              <a href=""><img class="logo" src="images/logo_cake.svg" width="200px" height="200px" alt=""></a>
+              <a href=""><img class="logo" src="Assets/logo_cake.svg" width="200px" height="200px" alt=""></a>
 
             </div>
 
