--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="menu.html">ABOUT </a>
+              <a class="nav-link" href="about.html">ABOUT </a>
             </li>
            
             <li class="nav-item">
