--- a/index.html
+++ b/index.html
@@ -102,11 +102,6 @@
 
         </div>
 
-
-
-       
-
-
       </div>
 
       <!-- next button -->
@@ -116,6 +111,40 @@
       </button>
     </div>
     <script src="menu.js"></script>
+    
+
+<footer class="container">
+  <div class="container-fluid text-center text-md-left">
+    <div class="row">
+      <div class="col-md-6 mt-md-0 mt-3">
+        <h5 class="text-uppercase footer-content-h">Subscribe and Save</h5>
+        <p class="footer-content-b">Subscribe to our Newsletter and receive offers difrectly to you inbox.</p>
+      </div>
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <div class="col-md-6 mb-md-0 mb-3">
+
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+</footer>
   </body>
 
 </html>
