Footer Changes Nov 29_1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="logo" src="Assets/logo_cake.png" width="70px" height="70px" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="logo" src="Assets/logo_cake.png" alt="Website Logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -111,40 +111,36 @@
       </button>
     </div>
     <script src="menu.js"></script>
-    
 
-<footer class="container">
-  <div class="container-fluid text-center text-md-left">
-    <div class="row">
-      <div class="col-md-6 mt-md-0 mt-3">
-        <h5 class="text-uppercase footer-content-h">Subscribe and Save</h5>
-        <p class="footer-content-b">Subscribe to our Newsletter and receive offers difrectly to you inbox.</p>
+    <footer class="container">
+      <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <div class="col-md-6 mt-md-0 mt-3">
+            <h5 class="text-uppercase footer-content-h">Subscribe and Save</h5>
+            <p class="footer-content-b">Subscribe to our Newsletter and receive offers difrectly to you inbox.</p>
+          </div>
+          <hr class="clearfix w-100 d-md-none pb-3">
+
+          <div class="col-md-6 mb-md-0 mb-3">
+
+            <h5 class="text-uppercase ft-nav-title">Navigation</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="index.html" class="ft-nav-item">Home</a>
+              </li>
+              <li>
+                <a href="about.html" class="ft-nav-item">About</a>
+              </li>
+              <li>
+                <a href="contact.html" class="ft-nav-item">Contact Us</a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
       </div>
-      <hr class="clearfix w-100 d-md-none pb-3">
-
-      <div class="col-md-6 mb-md-0 mb-3">
-
-        <h5 class="text-uppercase">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-  </div>
-</footer>
+    </footer>
   </body>
 
 </html>
