Footer and Contact Us Nov 30

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
             <h5 class="text-uppercase footer-content-h ft-nav-title">Subscribe and Save</h5>
             <p class="footer-content-b">Subscribe to our Newsletter and receive <br> offers difrectly to you inbox.</p>
             <form class="form-inline">
-              <div class="form-group mx-sm-3 mb-2">
+              <div class="form-group form-footer mx-sm-3 mb-2">
                 <label for="inputPassword2" class="sr-only">Your Email</label>
-                <input type="password" class="form-control" id="inputPassword2" placeholder="Your Email">
+                <input type="password" class="form-control form-footer" id="inputPassword2" placeholder="Your Email">
               </div>
               <button type="submit" class="btn btn-primary mb-2">Subscribe</button>
             </form>
